examples/test/testpolicy17145.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17145
  namespace: namespace256
spec:
  podSelector:
    matchLabels:
      key3: value23
      key19: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value2
          key11: value22
      podSelector:
        matchLabels:
          key30: value47
